2008-01-22  Sam Steingold  <sds@gnu.org>

	* control.d (APPLY, specdecled_): avoid GCC "warning: value
	computed is not used"

2008-01-22  Sam Steingold  <sds@gnu.org>

	* savemem.lisp (*saveinitmem-verbose*): add defvar
	(saveinitmem): :verbose defaults to *saveinitmem-verbose*
	* spvw.d (init_symbol_values): define *SAVEINITMEM-VERBOSE*
	(main_actions): set it to NIL when argv_verbose < 1
	* init.lisp (*saveinitmem-verbose*): export from CUSTOM
	(loading-message): permit more than 1 format argument
	* constsym.d (*saveinitmem-verbose*): add symbol

2008-01-22  Sam Steingold  <sds@gnu.org>

	* spvw_memfile.d (savemem): return file length
	* lispbibl.d (savemem): update prototype
	* pathname.d (SAVEMEM): return file length

2008-01-21  Sam Steingold  <sds@gnu.org>

	* spvw.d (run_hooks): establish a DRIVER frame around the loop to
	enable reset() on errors in user code
	(main_actions): ditto around loading RC file, init files,
	compiling files, executing scripts (but not expression, they go
	through SYS::DRIVER)

2008-01-22  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (with-abort-restart): new macro: establish the
	DEBUG catcher and the ABORT restart with a useful report function
	(main-loop, break-loop, step-hook-fn): use it

2008-01-22  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1877497 ]: the set of restarts grows with each image save
	* savemem.lisp (saveinitmem): bind *ACTIVE-RESTARTS* &
	*CONDITION-RESTARTS* to NIL around SAVEMEM instead of setting them
	to NIL in the *DRIVER* to avoid multiple ABORT restarts in saved images

2008-01-21  Sam Steingold  <sds@gnu.org>

	* eval.d (reset): set unwind_protect_to_save.upto_frame;
	print a useful(?) error message on abort
	(CHECK_STACK, CHECK_STACK_S, CHECK_STACK_C): new macros
	(eval_fsubr, eval_subr, apply_subr, funcall_subr): use CHECK_STACK_S
	(eval_closure, apply_closure, funcall_closure): use CHECK_STACK_C
	(find_keyword_value, match_subr_key, match_cclosure_key): avoid